--- a/FOU/login.html
+++ b/FOU/login.html
@@ -2,9 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>File Online Uploader</title>
+    <link rel="icon" href="media/favico.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="cssfiles/loginStyle.css">
   </head>
   <body>
+      <div class="grid-container">
+        <div class="header"><img class="image" src="media/titlulogo.png"></div>
+        <div class="login"></div>
+        <div class="description"></div>
+        <div class="left-part"></div>
+        <div class="right-part"></div>
+        <div class="foooter-part"></div>
+      </div>
 
+    </div>
   </body>
 </html>
