--- a/FOU/login.html
+++ b/FOU/login.html
@@ -6,16 +6,23 @@
     <link rel="icon" href="media/favico.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="cssfiles/loginStyle.css">
   </head>
-  <body>
+  <body class="body">
       <div class="grid-container">
-        <div class="header"><img class="image" src="media/titlulogo.png"></div>
-        <div class="login"></div>
-        <div class="description"></div>
+        <div class="header"><img class="image" src="media/titlu-logo.png"></div>
+        <div class="description">
+          Acest site are ca scop stocarea fișierelor într-o bază de date On-Line și ordonarea fișierelor pe foldere.
+        </div>
+        <div class="login">
+            Username:<br>
+            <input type="text" name="FirstName" value="username"><br>
+            Password:<br>
+            <input type="password" name="LastName" value="password"><br><br>
+            <button class="button buttonlogin" onclick="window.location.href='/Users/Sabin/Documents/GitHub/Proiect-Tehnologii-Web/FOU/home.html'">Login</button>
+        </div>
         <div class="left-part"></div>
         <div class="right-part"></div>
         <div class="foooter-part"></div>
       </div>
-
     </div>
   </body>
 </html>
