--- a/FOU/home.html
+++ b/FOU/home.html
@@ -2,60 +2,40 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>File Online Uploader</title>
     <link rel="icon" href="media/favico.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="cssfiles/homeStyle.css">
   </head>
   <body>
-
-
     <div class="grid-container">
-  <div class="header">
-    <div class="user">
-      <div class="avatar"><img src="media/avatar.png" alt="avatar"></div>
-      <div class="numeUser">catalincojocaruc</div>
+    <div class="header">
+      <div class="title"><img src="media/titlu-logo.png"></div>
+      <div class="search"><input type="text" placeholder="Search yout files right now.."></div>
+      <div class="user">
+        <div class="username">username</div>
+        <div class="avatar"><img src="media/avatar.png"></div>
+      </div>
     </div>
-    <div class="titluLogo"><img src="media/titlu-logo.png" alt="avatar"></div>
-  </div>
-  <div class="footer">
-    <div class="language"></div>
-    <div class="socialMedia"></div>
-  </div>
-  <div class="navBar">
-    <div class="search"></div>
-    <div class="upload">
-      <div class="icon"></div>
-      <div class="text"></div>
+    <div class="navBar">
+      <p>Upload</p>
+      <p>Favorites</p>
+      <p>Recent Uploads</p>
+      <p>My files</p>
+      <p>TAGS</p>
+      <p>Contact us</p>
     </div>
-    <div class="recent">
-      <div class="textRecent"></div>
-      <div class="iconRecent"></div>
-    </div>
-    <div class="favorite">
-      <div class="favIcon"></div>
-      <div class="textFav"></div>
-    </div>
-    <div class="yourFiles">
-      <div class="iconFiles"></div>
-      <div class="tetFiles"></div>
-    </div>
-  </div>
-  <div class="main">
-    <div class="titluMain"></div>
-    <div class="listFisiere">
-      <div class="pages"></div>
-      <div class="fisier1"></div>
-      <div class="fisier2"></div>
-      <div class="fisier3"></div>
-      <div class="fisier4"></div>
-      <div class="fisier5"></div>
-      <div class="fisier6"></div>
-      <div class="fisier7"></div>
-      <div class="fisier8"></div>
-    </div>
-  </div>
+    <div class="main"><h1>
+      My files </h1></div>
+      <div class="container">
+  <div class="nume">dcmi.png</div>
+  <div class="data">12.03.2019</div>
+  <div class="stergere">Sterge</div>
+  <div class="dimensiune">1.00 MB</div>
 </div>
 
+  </div>
+</div>
 
   </body>
 </html>
