--- a/FOU/login.html
+++ b/FOU/login.html
@@ -16,9 +16,9 @@
         <div class="login">
             <br>
             Username:<br>
-            <input type="text" name="FirstName" value="username"><br>
+            <input type="text" name="FirstName" placeholder="username"><br>
             Password:<br>
-            <input type="password" name="LastName" value="password"><br><a href="/resetpassword.html">Ups! Am uitat parola.</a><br><br>
+            <input type="password" name="LastName" placeholder="password"><br><a href="resetpassword.html">Ups! Am uitat parola.</a><br><br>
             <button class="button buttonlogin" onclick="window.location.href='home.html'">Login</button>
             <br><br><br>
             <p>Nu ai cont? <a href="register.html">Înregistrează-te.</a>
