--- a/FOU/register.html
+++ b/FOU/register.html
@@ -12,17 +12,17 @@
       <div class="register">
         <br>
         Nume:<br>
-        <input type="text" name="FirstName" value="nume"><br>
+        <input type="text" name="nume" placeholder="nume"><br>
         Prenume:<br>
-        <input type="text" name="LastName" value="prenume"><br>
+        <input type="text" name="prenume" placeholder="prenume"><br>
         Parolă:<br>
-        <input type="password" name="LastName" value="password"><br>
+        <input type="password" name="password" placeholder="password"><br>
         Confirmare parolă:<br>
-        <input type="password" name="LastName" value="password"><br>
+        <input type="password" name="repassword" placeholder="password"><br>
         Nume de utilizator:<br>
-        <input type="text" name="FirstName" value="utilizator"><br>
+        <input type="text" name="utilizator" placeholder="utilizator"><br>
         Email:<br>
-        <input type="text" name="LastName" value="Email"><br>
+        <input type="text" name="Email" placeholder="Email"><br>
         <br><br>
         <button class="button buttonlogin" onclick="window.location.href='login.html'">Register</button>
         <br><br><br>
