--- a/FOU/home.html
+++ b/FOU/home.html
@@ -13,7 +13,9 @@
       <div class="title"><img src="media/titlu-logo.png"></div>
       <div class="search"><input type="text" placeholder="Search yout files right now.."></div>
       <div class="user">
-        <div class="username">username</div>
+        <div class="username"><h3>username</h3>
+          <h5>Log Out</h5>
+        </div>
         <div class="avatar"><img src="media/avatar.png"></div>
       </div>
     </div>
@@ -26,15 +28,40 @@
       <p>Contact us</p>
     </div>
     <div class="main"><h1>
-      My files </h1></div>
-      <div class="container">
-  <div class="nume">dcmi.png</div>
-  <div class="data">12.03.2019</div>
-  <div class="stergere">Sterge</div>
-  <div class="dimensiune">1.00 MB</div>
+      My files </h1>
+      <table style="width:70%">
+  <tr>
+    <th>Nume fisier</th>
+    <th>Dimensiune</th>
+    <th>Data Modificarii</th>
+  </tr>
+  <tr bgcolor="#006999">
+    <td>DCMI123.png</td>
+    <td width="10%">12.04 MB</td>
+    <td>12.03.2019</td>
+  </tr>
+  <tr bgcolor="#007ab2">
+    <td>SpreadSheets.excel</td>
+    <td width="10%">140.03 KB</td>
+    <td>14.05.2016</td>
+  </tr>
+  <tr bgcolor="#006999">
+    <td>text1.word</td>
+    <td width="10%">235.00 KB</td>
+    <td>28.02.2009</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td align="right" height="30px"><img src="media/next-left.png"></td>
+    <td align="center">2</td>
+    <td align="left" height="30px"><img src="media/next-right.png"></td>
+  </tr>
+</table>
 </div>
-
-  </div>
 </div>
 
   </body>
