Pagina home updatata

--- a/FOU/home.html
+++ b/FOU/home.html
@@ -2,67 +2,59 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>File Online Uploader</title>
-    <link rel="icon" href="media/favico.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="cssfiles/homeStyle.css">
+    <title></title>
   </head>
   <body>
     <div class="grid-container">
-    <div class="header">
-      <div class="title"><img src="media/titlu-logo.png"></div>
-      <div class="search"><input type="text" placeholder="Search yout files right now.."></div>
-      <div class="user">
-        <div class="username"><h3>username</h3>
-          <h5>Log Out</h5>
-        </div>
-        <div class="avatar"><img src="media/avatar.png"></div>
+      <div class="LOGO"><img src="media/titlu-logo.png" class="imag"></div>
+      <a href="google.com">
+      <div class="upload">
+        <div class="logo"><img src="media/upload-logo.png" class="imag"></div>
+        <div class="option"><h1>UPLOAD</h1></div>
       </div>
-    </div>
-    <div class="navBar">
-      <p>Upload</p>
-      <p>Favorites</p>
-      <p>Recent Uploads</p>
-      <p>My files</p>
-      <p>TAGS</p>
-      <p>Contact us</p>
-    </div>
-    <div class="main"><h1>
-      My files </h1>
-      <table style="width:70%">
-  <tr>
-    <th>Nume fisier</th>
-    <th>Dimensiune</th>
-    <th>Data Modificarii</th>
-  </tr>
-  <tr bgcolor="#006999">
-    <td>DCMI123.png</td>
-    <td width="10%">12.04 MB</td>
-    <td>12.03.2019</td>
-  </tr>
-  <tr bgcolor="#007ab2">
-    <td>SpreadSheets.excel</td>
-    <td width="10%">140.03 KB</td>
-    <td>14.05.2016</td>
-  </tr>
-  <tr bgcolor="#006999">
-    <td>text1.word</td>
-    <td width="10%">235.00 KB</td>
-    <td>28.02.2009</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td align="right" height="30px"><img src="media/next-left.png"></td>
-    <td align="center">2</td>
-    <td align="left" height="30px"><img src="media/next-right.png"></td>
-  </tr>
-</table>
-</div>
-</div>
+      </a>
 
+      <a href="google.com">
+      <div class="favorites">
+        <div class="favlogo"><img src="media/favorites-logo.png" class="imag"></div>
+        <div class="favoption"><h1>FAVORITES</h1></div>
+      </div>
+      </a>
+
+  <a href="google.com">
+      <div class="recently">
+        <div class="reclogo"><img src="media/recent-logo.png" class="imag"></div>
+        <div class="recoption"><h1>RECENTLY ADDED</h1></div>
+      </div>
+</a>
+
+  <a href="google.com">
+      <div class="my-files">
+        <div class="mylogo"><img src="media/my-logo.png" class="imag"></div>
+      <div class="myoption"><h1>MY FILES</h1></div>
+    </div>
+</a>
+
+  <a href="google.com">
+      <div class="tags">
+        <div class="tagslogo"><img src="media/tags-logo.png" class="imag"></div>
+        <div class="tagsoption"><h1>TAGS</h1></div>
+      </div>
+</a>
+
+      <div class="search">
+        <div class="searchBar">
+          <input type="text" name="" value="Search your files here..."></div>
+        <div class="icon">
+          <div class="username"><h1>ACCOUNT</h1>
+            </div>
+            <div class="usericon">
+              <img src="media/avatar.png" class="imag">
+            </div>
+
+      </div>
+      <div class="Main"></div>
+    </div>
   </body>
 </html>
