--- a/FOU/home.html
+++ b/FOU/home.html
@@ -8,7 +8,7 @@
   <body>
     <div class="grid-container">
       <div class="LOGO"><img src="media/titlu-logo.png" class="imag"></div>
-      <a href="google.com">
+      <a href="https://www.youtube.com/">
       <div class="upload">
         <div class="logo"><img src="media/upload-logo.png" class="imag"></div>
         <div class="option"><h1>UPLOAD</h1></div>
@@ -25,7 +25,7 @@
   <a href="google.com">
       <div class="recently">
         <div class="reclogo"><img src="media/recent-logo.png" class="imag"></div>
-        <div class="recoption"><h1>RECENTLY ADDED</h1></div>
+        <div class="recoption"><h1>RECENTLY</h1></div>
       </div>
 </a>
 
