--- a/FOU/favourites.html
+++ b/FOU/favourites.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="cssfiles/homeStyle.css">
+    <link rel="stylesheet" type="text/css" href="cssfiles/favouritesStyle.css">
     <link rel="icon" href="media/favico.ico" type="image/x-icon">
     <title>File Online Uploader</title>
   </head>
