--- a/FOU/home.html
+++ b/FOU/home.html
@@ -14,7 +14,7 @@
       <div class="search"><input type="text" placeholder="Search yout files right now.."></div>
       <div class="user">
         <div class="username"><h3>username</h3>
-          <h5>Log Out</h5>
+          <h5><a href="login.html">Log Out</a></h5>
         </div>
         <div class="avatar"><img src="media/avatar.png"></div>
       </div>
