--- a/FOU/login.html
+++ b/FOU/login.html
@@ -16,12 +16,12 @@
         <div class="login">
             <br>
             Username:<br>
-            <input type="text" name="FirstName" placeholder="username"><br>
+            <input type="text" name="FirstName" placeholder="username"><br><br>
             Password:<br>
             <input type="password" name="LastName" placeholder="password"><br><a href="resetpassword.html">Ups! Am uitat parola.</a><br><br>
             <button class="button buttonlogin" onclick="window.location.href='home.html'">Login</button>
             <br><br><br>
-            <p>Nu ai cont? <a href="register.html">Înregistrează-te.</a>
+            <p>Nu ai cont?<br> <a href="register.html">Înregistrează-te.</a>
         </div>
         <div class="left-part"></div>
         <div class="right-part"></div>
