--- a/FOU/responsereset.html
+++ b/FOU/responsereset.html
@@ -4,21 +4,18 @@
     <meta charset="utf-8">
     <title>File Online Uploader</title>
     <link rel="icon" href="media/favico.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="cssfiles/resetpassword.css">
+    <link rel="stylesheet" type="text/css" href="cssfiles/responsereset.css">
   </head>
   <body class="body">
     <div class="grid-container">
       <div class="header"><a href="login.html"><img class="image" src="media/titlu-logo.png"></a></div>
       <div class="resetpassword">
         <br>
-        <h1>Ai uitat parola?</h1>
-        <p>Nu te panica,scrie emailul tau mai jos si iti vom trimite un mail cu datele de resetare a parolei.
+        <h1>Email trimis..</h1>
+        <p>Un email a fost trimis pe adresa ta.Mulțumim!
+        <br>Dacă nu ai primit, mai încearcă <a href=resetpassword.html>o dată</a>.
         <br><br><br>
-        Email:<br>
-        <input type="text" name="Email" placeholder="Email"><br>
-        <br>
-        <button class="button buttonlogin" onclick="window.location.href='responsereset.html'">Send Email..</button>
-        <br><br><br>
+        <br>Înapoi la pagina de <a href=login.html>login</a>.
       </div>
       <div class="left-part"></div>
       <div class="right-part"></div>
