--- a/FOU/account.html
+++ b/FOU/account.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="cssfiles/favouritesStyle.css">
+    <link rel="stylesheet" type="text/css" href="cssfiles/accountStyle.css">
     <link rel="icon" href="media/favico.ico" type="image/x-icon">
     <title>File Online Uploader</title>
   </head>
@@ -62,6 +62,7 @@
             </div>
       </div>
     </a>
+
       <div class="Main"></div>
     </div>
   </body>
