--- a/FOU/home.html
+++ b/FOU/home.html
@@ -53,15 +53,31 @@
       <div class="search">
         <div class="searchBar">
           <input type="text" name="" value="Search your files here..."></div>
+          <a href="account.html">
         <div class="icon">
           <div class="username"><h1>ACCOUNT</h1>
             </div>
             <div class="usericon">
               <img src="media/avatar.png" class="imag">
             </div>
-
       </div>
-      <div class="Main"></div>
+    </a>
+  </div>
+
+
+      <div class="Main">
+    <div class="footerText"></div>
+    <div class="Area1">
+      <div class="areaIcon"></div>
+      <div class="areaText"></div>
     </div>
+    <div class="Area2"></div>
+    <div class="Area3"></div>
+    <div class="Area4"></div>
+    <div class="Area5"></div>
+    <div class="Area6"></div>
+    <div class="mainTitle"><h1>File Online Uploader! - Your online data saver</h1></div>
+  </div>
+
   </body>
 </html>
