--- a/FOU/upload.html
+++ b/FOU/upload.html
@@ -53,14 +53,15 @@
       <div class="search">
         <div class="searchBar">
           <input type="text" name="" value="Search your files here..."></div>
+          <a href="account.html">
         <div class="icon">
           <div class="username"><h1>ACCOUNT</h1>
             </div>
             <div class="usericon">
               <img src="media/avatar.png" class="imag">
             </div>
-
       </div>
+    </a>
       <div class="Main"></div>
     </div>
   </body>
