--- a/FOU/home.html
+++ b/FOU/home.html
@@ -18,35 +18,35 @@
       <a href="upload.html">
       <div class="upload">
         <div class="logo"><img src="media/upload-logo.png" class="imag"></div>
-        <div class="option"><h1>UPLOAD</h1></div>
+        <div class="option"><h1>Upload</h1></div>
       </div>
       </a>
 
       <a href="favourites.html">
       <div class="favorites">
         <div class="favlogo"><img src="media/favorites-logo.png" class="imag"></div>
-        <div class="favoption"><h1>FAVORITES</h1></div>
+        <div class="favoption"><h1>Favorites</h1></div>
       </div>
       </a>
 
   <a href="recently.html">
       <div class="recently">
         <div class="reclogo"><img src="media/recent-logo.png" class="imag"></div>
-        <div class="recoption"><h1>RECENTLY</h1></div>
+        <div class="recoption"><h1>Recently</h1></div>
       </div>
 </a>
 
   <a href="my-files.html">
       <div class="my-files">
         <div class="mylogo"><img src="media/my-logo.png" class="imag"></div>
-      <div class="myoption"><h1>MY FILES</h1></div>
+      <div class="myoption"><h1>My files</h1></div>
     </div>
 </a>
 
   <a href="tags.html">
       <div class="tags">
         <div class="tagslogo"><img src="media/tags-logo.png" class="imag"></div>
-        <div class="tagsoption"><h1>TAGS</h1></div>
+        <div class="tagsoption"><h1>Tags</h1></div>
       </div>
 </a>
 
@@ -55,7 +55,7 @@
           <input type="text" name="" value="Search your files here..."></div>
           <a href="account.html">
         <div class="icon">
-          <div class="username"><h1>ACCOUNT</h1>
+          <div class="username"><h1>Account</h1>
             </div>
             <div class="usericon">
               <img src="media/avatar.png" class="imag">
@@ -66,16 +66,31 @@
 
 
       <div class="Main">
-    <div class="footerText"></div>
+    <div class="footerText"><h2>Thank you for choosing FOU!</h2><h2>CONTACT US</h2></div>
     <div class="Area1">
-      <div class="areaIcon"></div>
-      <div class="areaText"></div>
+      <div class="areaIcon"><img src="media/private.png" class="imag" ></div>
+      <div class="areaText"><h1>Privacy of your files</h1></div>
     </div>
-    <div class="Area2"></div>
-    <div class="Area3"></div>
-    <div class="Area4"></div>
-    <div class="Area5"></div>
-    <div class="Area6"></div>
+    <div class="Area2">
+      <div class="areaIcon"><img src="media/fast.png" class="imag" ></div>
+      <div class="areaText"><h1>Fast upload</h1></div>
+    </div>
+    <div class="Area3">
+      <div class="areaIcon"><img src="media/support.png" class="imag" ></div>
+      <div class="areaText"><h1>24H Customer support</h1></div>
+    </div>
+    <div class="Area4">
+      <div class="areaIcon"><img src="media/free.png" class="imag" ></div>
+      <div class="areaText"><h1>100% Free</h1></div>
+    </div>
+    <div class="Area5">
+      <div class="areaIcon"><img src="media/storage.png" class="imag" ></div>
+      <div class="areaText"><h1>Big storage for your data</h1></div>
+    </div>
+    <div class="Area6">
+      <div class="areaIcon"><img src="media/tags-logo.png" class="imag" ></div>
+      <div class="areaText"><h1>Tag your files</h1></div>
+    </div>
     <div class="mainTitle"><h1>File Online Uploader! - Your online data saver</h1></div>
   </div>
 
