--- a/FOU/recently.html
+++ b/FOU/recently.html
@@ -18,35 +18,35 @@
       <a href="upload.html">
       <div class="upload">
         <div class="logo"><img src="media/upload-logo.png" class="imag"></div>
-        <div class="option"><h1>UPLOAD</h1></div>
+        <div class="option"><h1>Upload</h1></div>
       </div>
       </a>
 
       <a href="favourites.html">
       <div class="favorites">
         <div class="favlogo"><img src="media/favorites-logo.png" class="imag"></div>
-        <div class="favoption"><h1>FAVORITES</h1></div>
+        <div class="favoption"><h1>Favorites</h1></div>
       </div>
       </a>
 
   <a href="recently.html">
       <div class="recently">
         <div class="reclogo"><img src="media/recent-logo.png" class="imag"></div>
-        <div class="recoption"><h1>RECENTLY</h1></div>
+        <div class="recoption"><h1>Recently</h1></div>
       </div>
 </a>
 
   <a href="my-files.html">
       <div class="my-files">
         <div class="mylogo"><img src="media/my-logo.png" class="imag"></div>
-      <div class="myoption"><h1>MY FILES</h1></div>
+      <div class="myoption"><h1>My files</h1></div>
     </div>
 </a>
 
   <a href="tags.html">
       <div class="tags">
         <div class="tagslogo"><img src="media/tags-logo.png" class="imag"></div>
-        <div class="tagsoption"><h1>TAGS</h1></div>
+        <div class="tagsoption"><h1>Tags</h1></div>
       </div>
 </a>
 
@@ -55,14 +55,15 @@
           <input type="text" name="" value="Search your files here..."></div>
           <a href="account.html">
         <div class="icon">
-          <div class="username"><h1>ACCOUNT</h1>
+          <div class="username"><h1>Account</h1>
             </div>
             <div class="usericon">
               <img src="media/avatar.png" class="imag">
             </div>
       </div>
     </a>
-      <div class="Main"></div>
     </div>
+      <div class="Main"></div>
+
   </body>
 </html>
