--- a/FOU/my-files.html
+++ b/FOU/my-files.html
@@ -62,7 +62,131 @@
             </div>
       </div>
     </a>
-      <div class="Main"></div>
     </div>
+      <div class="Main">
+    <table style="width:80%">
+      <tr class="tr1">
+        <th>FILE NAME
+        </th>
+        <th>LAST MODIFIED DATE
+        </th>
+        <th>SIZE(KB)
+        </th>
+        <th>MODIFIED HISTORY
+        </th>
+        <th>DOWNLOAD
+        </th>
+      </tr>
+      <tr>
+        <td>Acestaesteprimulfisier.txt
+        </td>
+        <td>20.03.2019
+        </td>
+        <td>265KB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+      <tr>
+        <td>aceastaesteoimagine.jpg
+        </td>
+        <td>20.03.2019
+        </td>
+        <td>30MB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+      <tr>
+        <td>acestaesteuntabel.xml
+        </td>
+        <td>19.03.2019
+        </td>
+        <td>23MB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+      <tr>
+        <td>acestaesteuntabel.xml
+        </td>
+        <td>19.03.2019
+        </td>
+        <td>23MB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+      <tr>
+        <td>acestaesteuntabel.xml
+        </td>
+        <td>19.03.2019
+        </td>
+        <td>23MB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+      <tr>
+        <td>acestaesteuntabel.xml
+        </td>
+        <td>19.03.2019
+        </td>
+        <td>23MB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+      <tr>
+        <td>acestaesteuntabel.xml
+        </td>
+        <td>19.03.2019
+        </td>
+        <td>23MB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+      <tr>
+        <td>acestaesteuntabel.xml
+        </td>
+        <td>19.03.2019
+        </td>
+        <td>23MB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+      <tr>
+        <td>acestaesteuntabel.xml
+        </td>
+        <td>19.03.2019
+        </td>
+        <td>23MB
+        </td>
+        <td><a href="">History..</a>
+        </td>
+        <td><a href="">Download on PC</a>
+        </td>
+      </tr>
+    </table>
+    <br><br><br><br><br><br>.
+  </div>
   </body>
 </html>
