--- a/FOU/resetpassword.html
+++ b/FOU/resetpassword.html
@@ -15,7 +15,7 @@
         <p>Nu te panica,scrie emailul tau mai jos si iti vom trimite un mail cu datele de resetare a parolei.
         <br><br><br>
         Email:<br>
-        <input type="text" name="Email" placeholder="Email"><br>
+        <input type="text" name="Email"><br>
         <br>
         <button class="button buttonlogin" onclick="window.location.href='responsereset.html'">Send Email..</button>
         <br><br><br>
