--- a/FOU/my-files.html
+++ b/FOU/my-files.html
@@ -63,7 +63,37 @@
       </div>
     </a>
     </div>
-      <div class="Main"></div>
+      <div class="Main" >
+        <h1> There are your files ! </h1>
+        <br>
+        <br>
+        <table style="width:80%" align="center">
+    <tr bgcolor="	#006999">
+      <th><h2>File name</h2></th>
+      <th><h2>Size</h2></th>
+      <th><h2>Date</h2></th>
+      <th><h2>Versions</h2></th>
+      <th><h2>Delete</h2></th>
+      <th><h2>Tags</h2></th>
+    </tr>
+    <tr bgcolor="#002333">
+      <td><h3>photo.png</h3></td>
+      <td><h3>134.00 KB</h3></td>
+      <td><h3>13.03.2018</h2></td>
+      <td><h3>History</h3></td>
+      <td><h3>Click here to delete</h3></td>
+      <td><h3>Click here</h3></td>
+    </tr>
+    <tr>
+      <td><h2>Firstname</h2></td>
+      <td><h2>Firstname</h2></td>
+      <td><h2>Firstname</h2></td>
+      <td><h2>Firstname</h2></td>
+      <td><h2>Firstname</h2></td>
+      <td><h2>Firstname</h2></td>
+    </tr>
+  </table>
+</div>
 
   </body>
 </html>
