--- a/FOU/my-files.html
+++ b/FOU/my-files.html
@@ -63,7 +63,6 @@
       </div>
     </a>
     </div>
-<<<<<<< HEAD
       <div class="Main" >
         <h1> There are your files ! </h1>
         <br>
@@ -81,7 +80,7 @@
       <td><h3>photo.png</h3></td>
       <td><h3>134.00 KB</h3></td>
       <td><h3>13.03.2018</h2></td>
-      <td><h3>History</h3></td>
+      <td><h3>Histoy</h3></td>
       <td><h3>Click here to delete</h3></td>
       <td><h3>Click here</h3></td>
     </tr>
@@ -96,132 +95,5 @@
   </table>
 </div>
 
-=======
-      <div class="Main">
-    <table style="width:80%">
-      <tr class="tr1">
-        <th>FILE NAME
-        </th>
-        <th>LAST MODIFIED DATE
-        </th>
-        <th>SIZE(KB)
-        </th>
-        <th>MODIFIED HISTORY
-        </th>
-        <th>DOWNLOAD
-        </th>
-      </tr>
-      <tr>
-        <td>Acestaesteprimulfisier.txt
-        </td>
-        <td>20.03.2019
-        </td>
-        <td>265KB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-      <tr>
-        <td>aceastaesteoimagine.jpg
-        </td>
-        <td>20.03.2019
-        </td>
-        <td>30MB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-      <tr>
-        <td>acestaesteuntabel.xml
-        </td>
-        <td>19.03.2019
-        </td>
-        <td>23MB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-      <tr>
-        <td>acestaesteuntabel.xml
-        </td>
-        <td>19.03.2019
-        </td>
-        <td>23MB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-      <tr>
-        <td>acestaesteuntabel.xml
-        </td>
-        <td>19.03.2019
-        </td>
-        <td>23MB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-      <tr>
-        <td>acestaesteuntabel.xml
-        </td>
-        <td>19.03.2019
-        </td>
-        <td>23MB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-      <tr>
-        <td>acestaesteuntabel.xml
-        </td>
-        <td>19.03.2019
-        </td>
-        <td>23MB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-      <tr>
-        <td>acestaesteuntabel.xml
-        </td>
-        <td>19.03.2019
-        </td>
-        <td>23MB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-      <tr>
-        <td>acestaesteuntabel.xml
-        </td>
-        <td>19.03.2019
-        </td>
-        <td>23MB
-        </td>
-        <td><a href="">History..</a>
-        </td>
-        <td><a href="">Download on PC</a>
-        </td>
-      </tr>
-    </table>
-    <br><br><br><br><br><br>.
-  </div>
->>>>>>> 510b03a932e76cfd2c9ea57fecad5c16ed982b23
   </body>
 </html>
