Pagini Recent+Favorites
Iconite pentru delete + tabel fisiere in pagina

--- a/FOUv0.5/recent.html
+++ b/FOUv0.5/recent.html
@@ -113,7 +113,38 @@
         <div class="row">
             <div class="column">
                 <div class="main">
-
+                  <h1> There are your recent files ! </h1>
+                  <br>
+                  <br>
+                  <table style="width:80%" align="center" border="0" cellspacing="0" cellpadding="0">
+                <tr bgcolor="	#006999">
+                <th><h2>File name</h2></th>
+                <th><h2>Size</h2></th>
+                <th><h2>Date</h2></th>
+                <th><h2>Versions</h2></th>
+                <th><h2>Tags</h2></th>
+                <th><h2>Favorites</h2></th>
+                <th><h2>Delete</h2></th>
+                </tr>
+                <tr bgcolor="#002333">
+                <td><h3>photo.png</h3></td>
+                <td><h3>134.00 KB</h3></td>
+                <td><h3>13.03.2018</h2></td>
+                <td><h3>3 versions</h3></td>
+                <td><h4><img src="media/tags-logo.png" width="75" height="75"></h4></td>
+                <td><h4><img src="media/favorites-logo.png" width="75" height="75"></h4></td>
+                <td><h4><img src="media/trash.png" width="75" height="75"></h4></td>
+                </tr>
+                <tr bgcolor="#006999">
+                <td><h3>text.word</h3></td>
+                <td><h3>50.00 KB</h3></td>
+                <td><h3>15.07.2019</h3></td>
+                <td><h3>4 versions</h3></td>
+                <td><h4><img src="media/tags-logo.png" width="75" height="75"></h4></td>
+                <td><h4><img src="media/favorites-logo.png" width="75" height="75"></h4></td>
+                <td><h4><img src="media/trash.png" width="75" height="75"></h4></td>
+                </tr>
+              </table>
                 </div>
             </div>
           </div>
