--- a/FOUv0.5/tags.html
+++ b/FOUv0.5/tags.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="cssFiles/tagsStyle.css">
     <link rel="icon" href="media/favico.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Online Uploader</title>
   </head>
   <body>
@@ -125,8 +126,7 @@
                   <button type="button" name="button"><h3>old song</h3></button>
                   <button type="button" name="button"><h3>archive rar</h3></button>
                   <button type="button" name="button"><h3>room</h3></button>
-                  <button type="button" name="button"><h3>ideas</h3></button>
-                  <button type="button" name="button"><h3>game</h3></button>
+              
                 </div>
             </div>
           </div>
