--- a/FOUv1.0/account.html
+++ b/FOUv1.0/account.html
@@ -117,7 +117,8 @@
                 <button type="button" name="button"><h3>Account details</h3></button>
                 <br>
                 <br>
-                <button type="button" name="button"><h3>Change password</h3></button>
+                <a href="changepassword.html">
+                <button type="button" name="button"><h3>Change password</h3></button></a>
                 <br>
                 <br>
               <a href="login.html">
