--- a/FOUv1.0/account.html
+++ b/FOUv1.0/account.html
@@ -125,7 +125,8 @@
               <button type="button" name="button"><h3>Log out</h3></button></a>
                 <br>
                 <br>
-                <button type="button" name="button"><h3>Contact us</h3></button>
+                <a href="contactus.html">
+                <button type="button" name="button"><h3>Contact us</h3></button></a>
                 </div>
             </div>
           </div>
