--- a/FOUv1.0/contactus.html
+++ b/FOUv1.0/contactus.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="cssFiles/changepasswordStyle.css">
+    <link rel="stylesheet" href="cssFiles/contactusStyle.css">
     <link rel="icon" href="media/favico.ico" type="image/x-icon">
     <title>File Online Uploader</title>
   </head>
@@ -114,17 +114,27 @@
           <div class="column">
               <div class="main">
                   <div class="column2" align="center">
-                    <h1>Change Password</h1>
+                    <h1>Contact</h1>
                     <br>
-                    Old password:<br>
-                    <input type="password" name="password"><br>
-                    New password:<br>
-                    <input type="password" name="password"><br>
-                    New password confirm:<br>
-                    <input type="password" name="repassword"><br>
-                    <br><br>
-                    <button class="button buttonlogin" onclick="window.location.href='account.html'">Change Password</button>
+                    <h2>
+                      Leader Project:<br>Cojocaru Cătălin Constantin
+                    </h2>
+                    Phone:0756899495
+                    <br>E-mail:catalincojocaruc@gmail.com
                     <br><br><br>
+                    <h2>
+                      Project asistant:<br>Pintilie Sabin
+                    </h2>
+                    Phone:0727052769
+                    <br>E-mail:sabinpintilie98@gmail.com
+                    <br>
+                    <br>
+                    <h3>Send us a message!</h3>
+                    <textarea rows="4" cols="50">
+                    </textarea>
+                    <br>
+                    <br>
+                    <button type="button" name="button" onclick="window.location.href='account.html'">Send message!</button>
                   </div>
 </div></div>
     </div>
