--- a/FOUv1.0/accountdetails.html
+++ b/FOUv1.0/accountdetails.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="cssFiles/changepasswordStyle.css">
+    <link rel="stylesheet" href="cssFiles/accountdetailsStyle.css">
     <link rel="icon" href="media/favico.ico" type="image/x-icon">
     <title>File Online Uploader</title>
   </head>
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="column">
               <div class="header">
-                  <a href="homeFOU.php">
+                  <a href="homeFOU.html">
                 <img src="media/titlu-logo.png">
                 </a>
               </div>
@@ -34,7 +34,7 @@
               </a>
           </div>
           <div class="column">
-              <a href="favorites.php">
+              <a href="favorites.html">
             <div class="navItem2">
               <div class="navItemRow">
               <div class="navItemColumn1">
@@ -48,7 +48,7 @@
             </a>
           </div>
           <div class="column">
-              <a href="recent.php">
+              <a href="recent.html">
             <div class="navItem1">
               <div class="navItemRow">
               <div class="navItemColumn1">
@@ -62,7 +62,7 @@
             </a>
           </div>
           <div class="column">
-              <a href="files.php">
+              <a href="files.html">
             <div class="navItem2">
               <div class="navItemRow">
               <div class="navItemColumn1">
@@ -76,7 +76,7 @@
             </a>
           </div>
           <div class="column">
-              <a href="tags.php">
+              <a href="tags.html">
             <div class="navItem1">
               <div class="navItemRow">
               <div class="navItemColumn1">
@@ -90,7 +90,7 @@
             </a>
           </div>
           <div class="column">
-              <a href="account.php">
+              <a href="account.html">
             <div class="navItemCurrent">
               <div class="navItemRow">
               <div class="navItemColumn1">
@@ -105,9 +105,7 @@
           </div>
           <div class="column">
             <div class="navSearchBar">
-              <form action="search.php" method="GET">
                 <input type="text" name="searchBar" value="Search your files..">
-              </form>
             </div>
           </div>
         </div>
@@ -117,27 +115,7 @@
               <div class="main">
                   <div class="column2" align="center">
                     <h1>Account Details</h1>
-                    <?php
-                        session_start();
 
-                        if(isset($_SESSION['User']))
-                        {
-                            $usr = $_SESSION['User'];
-                            $db = mysqli_connect('localhost', 'root', '', 'fou');
-                            $user_check_query = "SELECT * FROM useri WHERE username='$usr'";
-                            $result = mysqli_query($db, $user_check_query);
-                            $user = mysqli_fetch_assoc($result);
-                            echo 'First Name:<h2>'.$user['nume'].'</h2>';
-                            echo 'Last Name:<h2>'.$user['prenume'].'</h2>';
-                            echo 'Username:<h2>'.$user['username'].'</h2>';
-                            echo 'E-mail:<h2>'.$user['email'].'</h2>';
-                        }
-                        else
-                        {
-                            header("location:index.php");
-                        }
-
-                    ?>
                   </div>
 </div></div>
     </div>
