--- a/FOUv1.0/account.html
+++ b/FOUv1.0/account.html
@@ -114,7 +114,8 @@
             <div class="column">
                 <div class="main">
                   <h1>Account settings</h1>
-                <button type="button" name="button"><h3>Account details</h3></button>
+                <a href="accountdetails.html">
+                <button type="button" name="button"><h3>Account details</h3></button></a>
                 <br>
                 <br>
                 <a href="changepassword.html">
